--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 $primary-color: #5956E9;
 $secundary-color: #4745d8;
 $primary-text-color: #232233;
+$paragraphs-text-color: #6C6C72;
 
 @mixin personalize-bg($bg-color, $padding, $text-color, $border-radius) {
     background-color: $bg-color;
@@ -21,9 +22,12 @@ $primary-text-color: #232233;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 50px;
 
-    min-height: 100vh;
-    background-color: $primary-color;
+    min-height: 200vh;
+    background-image: url("/src/assets/background/bg-img.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 
     header {
         display: flex;
@@ -151,5 +155,57 @@ $primary-text-color: #232233;
                 border-radius: 0.3125rem;
             }
         }
+    }
+
+    .homeSection {
+        display: flex;
+        gap: 50px;
+
+        padding-left: 2%;
+        padding-right: 2%;
+
+        .homeSectionLeftWrapper {
+            display: grid;
+            place-content: center;
+            position: relative;
+
+            .homeSectionLeftWrapperBoxContant {
+                display: flex;
+                flex-direction: column;
+
+                position: absolute;
+
+                gap: 40px;
+                top: 25%;
+                right: 50px;
+
+                padding: 5%;
+
+                background-color: #FFF;
+
+                h1 {
+                    color: $primary-color;
+                    font-size: 3.05188rem;
+                    font-style: normal;
+                    font-weight: 700;
+                }
+
+                p {
+                    color: $paragraphs-text-color;
+                    font-size: 1rem;
+                    font-style: normal;
+                    font-weight: 400;
+                }
+
+                div {
+                    div {
+                        img {
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
+
     }
 }
