--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,14 +10,12 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  min-height: 200vh;
-  background-image: url("/src/assets/background/bg-img.svg");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  min-height: 100vh;
 }
 .container header {
   display: flex;
   flex-direction: column;
+  position: absolute;
   padding: 2%;
   gap: 20px;
   width: 80%;
@@ -112,9 +110,15 @@
 }
 .container .homeSection {
   display: flex;
+  justify-content: center;
   gap: 50px;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding: 2%;
+  padding-top: 15%;
+  width: 100%;
+  height: 100%;
+  background-image: url("/src/assets/background/bg-img.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 .container .homeSection .homeSectionLeftWrapper {
   display: grid;
@@ -124,10 +128,11 @@
 .container .homeSection .homeSectionLeftWrapper .homeSectionLeftWrapperBoxContant {
   display: flex;
   flex-direction: column;
+  width: 100%;
   position: absolute;
-  gap: 40px;
   top: 25%;
   right: 50px;
+  gap: 40px;
   padding: 5%;
   background-color: #FFF;
 }
@@ -137,14 +142,44 @@
   font-style: normal;
   font-weight: 700;
 }
-.container .homeSection .homeSectionLeftWrapper .homeSectionLeftWrapperBoxContant p {
+.container .homeSection .homeSectionLeftWrapper .homeSectionLeftWrapperBoxContant div div img {
+  cursor: pointer;
+}
+.container .aboutSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+  gap: 80px;
+  text-align: center;
+}
+.container .aboutSection .aboutSectionBottomContainer {
+  display: flex;
+  gap: 25%;
+}
+.container .aboutSection .aboutSectionBottomContainer .aboutSectionBottomContainerRigthWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.container .aboutSection .aboutSectionBottomContainer .aboutSectionBottomContainerRigthWrapper .aboutSectionTextBoxContant {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container .aboutSection .aboutSectionBottomContainer .aboutSectionBottomContainerRigthWrapper .aboutSectionTextBoxContant div {
+  display: flex;
+  gap: 10px;
+}
+.container .aboutSection .aboutSectionBottomContainer .aboutSectionBottomContainerRigthWrapper .aboutSectionTextBoxContant p {
+  text-align: start;
+}
+
+p {
   color: #6C6C72;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
-}
-.container .homeSection .homeSectionLeftWrapper .homeSectionLeftWrapperBoxContant div div img {
-  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
