--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,14 +24,12 @@ $paragraphs-text-color: #6C6C72;
     align-items: center;
     gap: 50px;
 
-    min-height: 200vh;
-    background-image: url("/src/assets/background/bg-img.svg");
-    background-repeat: no-repeat;
-    background-size: 100%;
+    min-height: 100vh;
 
     header {
         display: flex;
         flex-direction: column;
+        position: absolute;
 
         padding: 2%;
         gap: 20px;
@@ -159,10 +157,19 @@ $paragraphs-text-color: #6C6C72;
 
     .homeSection {
         display: flex;
+        justify-content: center;
         gap: 50px;
 
-        padding-left: 2%;
-        padding-right: 2%;
+        padding: 2%;
+        padding-top: 15%;
+
+
+        width: 100%;
+        height: 100%;
+
+        background-image: url("/src/assets/background/bg-img.svg");
+        background-repeat: no-repeat;
+        background-size: 100%;
 
         .homeSectionLeftWrapper {
             display: grid;
@@ -172,12 +179,13 @@ $paragraphs-text-color: #6C6C72;
             .homeSectionLeftWrapperBoxContant {
                 display: flex;
                 flex-direction: column;
+                width: 100%;
 
                 position: absolute;
-
-                gap: 40px;
                 top: 25%;
                 right: 50px;
+
+                gap: 40px;
 
                 padding: 5%;
 
@@ -188,13 +196,6 @@ $paragraphs-text-color: #6C6C72;
                     font-size: 3.05188rem;
                     font-style: normal;
                     font-weight: 700;
-                }
-
-                p {
-                    color: $paragraphs-text-color;
-                    font-size: 1rem;
-                    font-style: normal;
-                    font-weight: 400;
                 }
 
                 div {
@@ -208,4 +209,48 @@ $paragraphs-text-color: #6C6C72;
         }
 
     }
+
+    .aboutSection {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding: 5%;
+        gap: 80px;
+
+        text-align: center;
+
+        .aboutSectionBottomContainer {
+            display: flex;
+            gap: 25%;
+
+            .aboutSectionBottomContainerRigthWrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 80px;
+
+                .aboutSectionTextBoxContant {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+
+                    div {
+                        display: flex;
+                        gap: 10px;
+                    }
+
+                    p {
+                        text-align: start;
+                    }
+                }
+            }
+        }
+    }
+}
+
+p {
+    color: $paragraphs-text-color;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
 }
