--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -125,8 +125,6 @@ $gray-paragraphs-text-color: #6C6C72;
                 .headerBottomWrapperNavBarDownloadButton {
                     @include personalize-bg($primary-color, 5%, #FFF, 5px);
 
-                    transition: 0.2s;
-
                     text-decoration: none;
 
                     &:hover {
@@ -327,18 +325,176 @@ $gray-paragraphs-text-color: #6C6C72;
             }
         }
     }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+
+        gap: 100px;
+
+        padding: 2%;
+        padding-left: 10%;
+        padding-right: 10%;
+        width: 100%;
+        background-color: $primary-text-color;
+
+        .footerTopWrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            position: relative;
+            bottom: 100px;
+
+            padding: 8%;
+
+            background-color: #FFF;
+
+            border-radius: 30px;
+
+            width: 100%;
+
+            .footerTopWrapperLeftTextBox {
+                display: flex;
+                align-items: center;
+
+                gap: 2%;
+
+                width: 100%;
+
+                span {
+                    background-color: $primary-color;
+                    padding: 4%;
+                    border-radius: 50px;
+
+                    img {
+                        width: 25px;
+                    }
+                }
+            }
+
+            .footerTopWrapperRigthTextBox {
+                @extend .footerTopWrapperLeftTextBox;
+                border-left: 3px solid $gray-paragraphs-text-color;
+                padding-left: 2%;
+            }
+        }
+
+        .footerMainWrapper {
+            display: flex;
+            justify-content: space-around;
+            color: #FFF;
+            gap: 10%;
+
+            div {
+                width: 100%;
+            }
+
+            .footerBottomWrapperLogoArea {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+
+                gap: 25px;
+
+                div {
+                    display: flex;
+                    justify-content: space-between;
+
+                    width: 80%;
+                }
+            }
+
+            .footerBottomWrapperLinksArea {
+                display: flex;
+                flex-direction: column;
+                gap: 10%;
+
+                div {
+                    display: flex;
+                    flex-direction: column;
+
+                    height: 100%;
+
+                    gap: 15%;
+
+                    a {
+                        text-decoration: none;
+                        color: #FFF;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+
+            .footerBottomWrapperNewsLetterArea {
+                display: flex;
+                flex-direction: column;
+
+                gap: 15%;
+
+                div {
+                    display: flex;
+
+                    padding: 0.5%;
+
+                    border-radius: 4px;
+
+                    background-color: #FFF;
+
+                    input {
+                        width: 100%;
+
+                        border: none;
+                        outline: none;
+
+                        padding: 2%;
+                    }
+
+                    button {
+                        background-color: $primary-color;
+
+                        padding: 2.5%;
+
+                        height: 100%;
+
+                        cursor: pointer;
+
+                        border: none;
+                        border-radius: 4px;
+                        outline: none;
+
+                        &:hover {
+                            background-color: $secundary-color;
+                        }
+                    }
+                }
+            }
+        }
+
+        .footerBottomWrapper {
+            display: flex;
+            flex-direction: column;
+
+            gap: 20px;
+            text-align: center;
+        }
+
+    }
 }
 
 .gray-paragraphs {
     color: $gray-paragraphs-text-color;
-    font-size: 1rem;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
 }
 
 .white-paragraphs {
     color: #FFF;
-    font-size: 1rem;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
 }
