--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -409,6 +409,85 @@ $gray-paragraphs-text-color: #6C6C72;
                 }
             }
         }
+
+        .howToUseSection {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            position: relative;
+
+            height: 100%;
+            width: 100%;
+
+            text-align: center;
+
+            color: #FFF;
+
+            main {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                width: 100%;
+                min-height: 30vh;
+
+                background-image: url("/src/assets/background/bg-img.svg");
+                background-size: 100%;
+
+                p {
+                    width: 50%;
+                }
+            }
+
+            img {
+                position: absolute;
+                top: 50%;
+                padding-top: 2.5%;
+                width: 32%;
+            }
+        }
+
+        .ourTeamSection {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            text-align: center;
+
+            padding: 5%;
+            padding-top: 20%;
+
+            width: 100%;
+
+            span {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                p {
+                    width: 50%;
+                }
+            }
+
+            main {
+                display: flex;
+                gap: 5%;
+
+                .teamProfileContant {
+
+                    .teamProfileContantSocialMidias {
+                        display: flex;
+                        justify-content: space-around;
+
+                        img {
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     footer {
