--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -488,6 +488,67 @@ $gray-paragraphs-text-color: #6C6C72;
                 }
             }
         }
+
+        .ourHappyCostumersSection {
+            text-align: center;
+
+            padding: 5%;
+
+            background-image: url(/src/assets/background/bg-img.svg);
+            background-size: 100%;
+
+            color: #FFF;
+
+            span {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                width: 100%;
+
+                p {
+                    width: 50%;
+                }
+            }
+
+            .swiper {
+                display: flex;
+                flex-direction: column;
+
+                width: 75vh;
+
+                gap: 10px;
+
+                .swiper-wrapper {
+                    display: flex;
+
+                    .swiper-slide {
+
+                        color: $primary-text-color;
+
+                        border-radius: 10px;
+
+                        padding: 5%;
+
+                        background-color: #FFF;
+                    }
+                }
+
+                .swiper-pagination {
+                    display: flex;
+                    justify-content: center;
+
+                    position: static;
+
+                    span {
+                        height: 20px;
+                        width: 20px;
+
+                        background-color: #FFF;
+                    }
+                }
+            }
+        }
     }
 
     footer {
@@ -593,44 +654,49 @@ $gray-paragraphs-text-color: #6C6C72;
             }
 
             .footerBottomWrapperNewsLetterArea {
-                display: flex;
-                flex-direction: column;
 
-                gap: 15%;
-
-                div {
+                form {
                     display: flex;
+                    flex-direction: column;
 
-                    padding: 0.5%;
+                    height: 100%;
 
-                    border-radius: 4px;
+                    gap: 25px;
 
-                    background-color: #FFF;
+                    div {
+                        display: flex;
 
-                    input {
-                        width: 100%;
+                        padding: 0.5%;
 
-                        border: none;
-                        outline: none;
-
-                        padding: 2%;
-                    }
-
-                    button {
-                        background-color: $primary-color;
-
-                        padding: 2.5%;
-
-                        height: 100%;
-
-                        cursor: pointer;
-
-                        border: none;
                         border-radius: 4px;
-                        outline: none;
 
-                        &:hover {
-                            background-color: $secundary-color;
+                        background-color: #FFF;
+
+                        input {
+                            width: 100%;
+
+                            border: none;
+                            outline: none;
+
+                            padding: 2%;
+                        }
+
+                        button {
+                            background-color: $primary-color;
+
+                            padding: 2.5%;
+
+                            height: 100%;
+
+                            cursor: pointer;
+
+                            border: none;
+                            border-radius: 4px;
+                            outline: none;
+
+                            &:hover {
+                                background-color: $secundary-color;
+                            }
                         }
                     }
                 }
