--- a/src/css/style.css
+++ b/src/css/style.css
@@ -389,6 +389,44 @@
   width: 20px;
   background-color: #FFF;
 }
+.container main .ourRecentBlogSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5%;
+}
+.container main .ourRecentBlogSection span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+.container main .ourRecentBlogSection span p {
+  width: 50%;
+}
+.container main .ourRecentBlogSection .blogLinkContainer {
+  display: flex;
+  justify-content: space-around;
+  gap: 5%;
+}
+.container main .ourRecentBlogSection .blogLinkContainer .blogLinkContant {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  text-decoration: none;
+  color: #232233;
+  transition: 0.5s;
+}
+.container main .ourRecentBlogSection .blogLinkContainer .blogLinkContant img {
+  width: 100%;
+}
+.container main .ourRecentBlogSection .blogLinkContainer .blogLinkContant a {
+  width: 200%;
+}
+.container main .ourRecentBlogSection .blogLinkContainer .blogLinkContant:hover {
+  opacity: 80%;
+}
 .container footer {
   display: flex;
   flex-direction: column;
