--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -47,19 +47,8 @@ $gray-paragraphs-text-color: #6C6C72;
                     display: flex;
                     align-items: center;
                     gap: 15px;
-                    border: 2px solid transparent;
-                    transition: 0.2s;
 
                     cursor: pointer;
-
-                    &:hover {
-                        border-bottom-color: #FFF;
-                    }
-
-                    img {
-                        width: 18px;
-                        height: 18px;
-                    }
 
                     p {
                         color: var(--white, #FFF);
@@ -90,12 +79,12 @@ $gray-paragraphs-text-color: #6C6C72;
             justify-content: space-around;
             align-items: center;
 
-            height: 3.75rem;
-
-            padding: 2%;
-
             background-color: #FFF;
             border-radius: 5px;
+
+            height: 60px;
+
+            padding: 2%;
 
             span {
                 display: flex;
@@ -103,15 +92,13 @@ $gray-paragraphs-text-color: #6C6C72;
                 align-items: center;
                 gap: 20px;
 
+                font-size: 20px;
+
                 .headerBottomWrapperNavBarButton {
                     color: $primary-text-color;
 
                     text-decoration: none;
 
-                    height: auto;
-                    width: auto;
-
-                    font-size: larger;
                     font-style: normal;
                     font-weight: 500;
 
@@ -123,7 +110,13 @@ $gray-paragraphs-text-color: #6C6C72;
                 }
 
                 .headerBottomWrapperNavBarDownloadButton {
-                    @include personalize-bg($primary-color, 5%, #FFF, 5px);
+                    @include personalize-bg($primary-color, 2%, #FFF, 5px);
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    height: 3rem;
 
                     text-decoration: none;
 
@@ -139,68 +132,86 @@ $gray-paragraphs-text-color: #6C6C72;
                 align-items: center;
 
                 background-color: #FFF;
-                padding: 2%;
 
                 width: 12.5rem;
                 height: 5.625rem;
                 flex-shrink: 0;
 
-                border-radius: 0.3125rem;
+                border-radius: .3125rem;
             }
         }
     }
 
     main {
+        width: 100%;
 
         .homeSection {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
 
             padding: 5%;
             padding-top: 15%;
 
-            width: 100%;
-            height: 100%;
-
-            background-image: url("/./src/assets/background/bg-img.svg");
+            background-image: url("/src/assets/background/bg-img.svg");
+            background-size: cover;
             background-repeat: no-repeat;
-            background-size: 100%;
 
             .homeSectionLeftWrapper {
-                display: grid;
-                place-content: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 position: relative;
+
+                width: 100%;
+                height: 100%;
 
                 .homeSectionLeftWrapperBoxContant {
                     display: flex;
                     flex-direction: column;
-                    width: 100%;
+
+                    justify-content: space-around;
+
+                    width: 50%;
+                    height: 75%;
+
+                    gap: 5%;
+
+                    padding: 2%;
 
                     position: absolute;
-                    top: 25%;
-                    right: 50px;
+                    right: 30%;
+                    top: 10%;
 
-                    gap: 40px;
-
-                    padding: 5%;
 
                     background-color: #FFF;
 
                     h1 {
                         color: $primary-color;
-                        font-size: 3.05188rem;
-                        font-style: normal;
-                        font-weight: 700;
+                        font-size: 48.8301px;
+                    }
+
+                    h2 {
+                        font-size: 25px;
                     }
 
                     div {
                         div {
                             img {
+                                width: 25%;
+
                                 cursor: pointer;
                             }
                         }
                     }
                 }
+
+                img {
+                    width: 50%;
+                }
+            }
+
+            img {
+                width: 40.375rem;
             }
 
         }
@@ -391,7 +402,7 @@ $gray-paragraphs-text-color: #6C6C72;
 
                             color: #FFF;
 
-                            border-radius: 0.625rem;
+                            border-radius: .625rem;
 
                             gap: 15px;
 
@@ -777,4 +788,111 @@ $gray-paragraphs-text-color: #6C6C72;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
+}
+
+@media (max-width: 1800px) {
+    .container {
+        header {
+            display: flex;
+        }
+
+        main {
+            .homeSection {
+                .homeSectionLeftWrapper {
+
+                    .homeSectionLeftWrapperBoxContant {
+
+                        h1 {
+                            font-size: 32px;
+                        }
+
+                        p {
+                            font-size: 15px;
+                        }
+
+                        h2 {
+                            font-size: 22px;
+                        }
+                    }
+                }
+
+                img {
+                    width: 120%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1440px) {
+    .container {
+        header {
+            display: none;
+        }
+
+        main {
+            .homeSection {
+                padding-top: 25%;
+
+                .homeSectionLeftWrapper {
+
+                    .homeSectionLeftWrapperBoxContant {
+
+                        h1 {
+                            font-size: 24px;
+                        }
+
+                        p {
+                            font-size: 7px;
+                        }
+
+                        h2 {
+                            font-size: 14px;
+                        }
+                    }
+                }
+
+                img {
+                    width: 80%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 780px) {
+    .container {
+        main {
+            .homeSection {
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                padding-top: 40%;
+
+                gap: 20px;
+
+                .homeSectionLeftWrapper {
+                    .homeSectionLeftWrapperBoxContant {
+                        width: 75%;
+                        height: 85%;
+
+                        top: 8%;
+                        right: 20%;
+                    }
+
+                    img {
+                        width: 80%;
+                    }
+                }
+
+                .homeSectionRigthWrapper {
+                    display: flex;
+                    justify-content: center;
+
+                    padding-left: 20%;
+                }
+            }
+        }
+    }
 }
