--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -224,16 +224,31 @@ $gray-paragraphs-text-color: #6C6C72;
             padding: 5%;
             gap: 80px;
 
-            text-align: center;
+
+            span {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+
+                width: 80%;
+            }
 
             .aboutSectionBottomContainer {
                 display: flex;
-                gap: 25%;
+                justify-content: space-between;
+                gap: 20%;
+
+
+                .aboutSectionBottomContainerLeftWrapper {
+                    width: 75%;
+                }
 
                 .aboutSectionBottomContainerRigthWrapper {
                     display: flex;
                     flex-direction: column;
+                    align-items: start;
                     gap: 80px;
+
 
                     .aboutSectionTextBoxContant {
                         display: flex;
@@ -250,6 +265,7 @@ $gray-paragraphs-text-color: #6C6C72;
                         }
                     }
                 }
+
             }
         }
 
@@ -891,6 +907,17 @@ $gray-paragraphs-text-color: #6C6C72;
                     justify-content: center;
 
                     padding-left: 20%;
+                }
+
+
+            }
+
+            .aboutSectionBottomContainer {
+                flex-direction: column;
+                align-items: center;
+
+                .aboutSectionBottomContainerLeftWrapper {
+                    padding-bottom: 10%;
                 }
             }
         }
