--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -380,13 +380,16 @@ $gray-paragraphs-text-color: #6C6C72;
 
             .appInterfaceSectionBottomDownloadAppWrapper {
                 display: flex;
-                gap: 10%;
+                gap: 50px;
+
 
                 .appInterfaceSectionDownloadAppWrapperLeftContantBox {
                     display: flex;
                     flex-direction: column;
 
-                    gap: 10%;
+                    width: 100%;
+
+                    gap: 50px;
 
                     text-align: start;
 
@@ -396,11 +399,14 @@ $gray-paragraphs-text-color: #6C6C72;
 
                         div {
                             display: flex;
-                            gap: 10%;
+                            gap: 2%;
 
                             cursor: pointer;
+                            width: 100%;
 
-                            width: 20%;
+                            img {
+                                min-width: 25%;
+                            }
                         }
                     }
 
@@ -408,13 +414,14 @@ $gray-paragraphs-text-color: #6C6C72;
                         display: flex;
                         gap: 5%;
 
-                        div {
+                        .ratingTextBoxContant {
                             display: flex;
                             justify-content: center;
                             align-items: center;
                             flex-direction: column;
+                            text-align: center;
 
-                            width: 100%;
+                            min-width: 30%;
 
                             padding: 2%;
 
@@ -433,8 +440,12 @@ $gray-paragraphs-text-color: #6C6C72;
                     }
                 }
 
-                img {
+                .appInterfaceSectionDownloadAppWrapperRightImgBox {
                     width: 100%;
+
+                    img {
+                        width: 80%;
+                    }
                 }
             }
         }
@@ -796,14 +807,12 @@ $gray-paragraphs-text-color: #6C6C72;
 
 .gray-paragraphs {
     color: $gray-paragraphs-text-color;
-    font-size: 16px;
     font-style: normal;
     font-weight: 400;
 }
 
 .white-paragraphs {
     color: #FFF;
-    font-size: 16px;
     font-style: normal;
     font-weight: 400;
 }
@@ -955,6 +964,13 @@ $gray-paragraphs-text-color: #6C6C72;
                     }
                 }
             }
+
+
+            .appInterfaceSectionBottomDownloadAppWrapper {
+                flex-direction: column;
+                align-items: center;
+            }
+
         }
     }
 }
