--- a/src/css/style.css
+++ b/src/css/style.css
@@ -320,18 +320,16 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  height: 100%;
-  width: 100%;
   text-align: center;
   color: #FFF;
 }
 .container main .howToUseSection main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding: 5%;
   width: 100%;
-  min-height: 30vh;
+  min-height: 45vh;
   background-image: url("/src/assets/background/bg-img.svg");
   background-size: 100%;
 }
@@ -340,9 +338,10 @@
 }
 .container main .howToUseSection img {
   position: absolute;
+  height: 100%;
+  padding: 2%;
   top: 50%;
-  padding-top: 2.5%;
-  width: 32%;
+  width: 100%;
 }
 .container main .ourTeamSection {
   display: flex;
